{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "00f49548-3e3e-4b95-85dd-09f3dbb1cdc0",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "a7f1397c-3e64-4316-a42f-b4f5650527e3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SpecialButton",
                    "type": "Button",
                    "id": "e80328bf-1a1d-4e99-8c86-1a8bf47ac863",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SpecialStick",
                    "type": "Value",
                    "id": "35cc39d4-4d3b-4560-bf69-3cbf942f7ee0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "4b5d88eb-a518-4ad4-8b09-63136be61955",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchEquipment",
                    "type": "Button",
                    "id": "c050ac69-3b00-4b18-93c7-5ef8d48abe32",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchCharacter1",
                    "type": "Button",
                    "id": "fee4bd67-cc14-44c5-8491-f0e7a7669064",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchCharacter2",
                    "type": "Button",
                    "id": "21b65760-9caf-4119-8786-609a1bdf20c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchCharacter3",
                    "type": "Button",
                    "id": "1bb062d5-1bda-435d-935c-13162c89942a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fcd68671-89ea-4358-9032-5af39d68785a",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0467a811-ecf8-42d3-bcd6-d4b9360dda2b",
                    "path": "<AndroidJoystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5532d1ba-62af-467c-8cf1-4a03b8f26ef0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpecialButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9659bb2-1fc7-4df6-8b87-063d7361dde6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07dfc123-4fd5-48e6-9eb5-3a3ae1afc278",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCharacter1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2defa23-848a-4d9b-837b-5ea31c79e840",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCharacter2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c568dab-aa2d-40f1-9ecd-3c60bce12495",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCharacter3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57abb6d8-afe2-4cac-b91b-61727a2e7f5b",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpecialStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cfec9662-6c52-4488-9c12-7c2c2822a78c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchEquipment",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}